<resources>
    <string name="app_name">SobremesasApp</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="nome_tairo">Tairo Roberto Miguel</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horario"> Fecha às 22:00</string>
    <string name="paris_6">Paris 6</string>
    <string name="endereco">Alameda Tietê. 279 - Jardim Paulista</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="dados_sucesso">Dados Salvos com sucesso</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="emailTairo">tairo@digitalhouse.com</string>
    <string name="principais_pratos">Principais Pratos</string>
    <string name="bem_casado">Bem casado</string>
    <string name="pudim">Pudim</string>
    <string name="pudim_muito_bom">Pudim é muito Bom</string>
</resources>
